<resources>
    <string name="app_name">Quiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="knowledge">Knowledge</string>
    <string name="art_and_craft">Art &amp; Craft</string>
    <string name="drama">Drama</string>
    <string name="science">Science</string>
    <string name="mathematics">Mathematics</string>
    <string name="top_quiz_categories">Top Quiz Categories</string>
    <string name="christophy_barth">Christophy Barth</string>
</resources>