<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeFragViewModel"
            type="capps.quiz.app.viewmodel.HomeFragmentVM" />
    </data>

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDF4F6"
        tools:context=".HomeFragment"
        tools:ignore="ContentDescription">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/card_view_bg">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="10dp"
                android:src="@drawable/my_dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/profile"
                android:layout_alignBottom="@id/profile"
                android:layout_toEndOf="@id/profile"
                android:gravity="center_vertical"
                android:text="@string/christophy_barth"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="90dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/play_and_win" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view"
            android:layout_alignStart="@id/card_view"
            android:layout_marginVertical="25dp"
            android:text="@string/top_quiz_categories"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view"
            android:layout_alignTop="@id/tv_1"
            android:layout_alignEnd="@id/card_view"
            android:layout_alignBottom="@id/tv_1"
            android:background="@drawable/corner_radius"
            android:padding="10dp"
            android:text="View All"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom"
            android:layout_below="@id/tv_1"
            android:columnCount="3"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/type1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{()-> homeFragViewModel.type1()}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/mathematics" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/mathematics"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/type2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{()-> homeFragViewModel.type2()}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/science" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/science"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/type3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{()-> homeFragViewModel.type3()}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/drama" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/drama"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/type4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{()-> homeFragViewModel.type4()}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/art" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/art_and_craft"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/type5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{()-> homeFragViewModel.type5()}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/art" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/knowledge"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/type6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{()-> homeFragViewModel.type6()}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/language" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/language"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/BottomNavigationView"
                app:itemBackground="@color/white"
                app:itemIconTint="@color/selector"
                app:itemTextColor="@color/colorPrimary"
                app:labelVisibilityMode="auto"
                app:menu="@menu/bottom_menu" />


        </com.google.android.material.appbar.AppBarLayout>

    </RelativeLayout>

</layout>